--- a/server/package.json
+++ b/server/package.json
@@ -4,23 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clien-install": "cd .. && npm install",
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "cd .. && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.18"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
   }
 }
